# wolfram-rust-library

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
notebooks/: benchmark.wl  example_test.wl  test.nb
scripts/: benchmark.wl
wolfram-app-discovery/: Cargo.toml  README.md
wolfram-app-discovery/src/: config.rs  lib.rs
wolfram-app-discovery/src/os/: mod.rs  windows.rs
wolfram-cli/: Cargo.toml
wolfram-cli/commands/: evaluate.wl  test.wl
wolfram-cli/src/: build.rs  commands.rs  main.rs
wolfram-cli/test-scripts/: hello.wl  world.wl
wolfram-examples/: Cargo.toml
wolfram-examples/examples/: foreign_functions.rs  legacy_native.rs  legacy_wstp.rs  mixed.rs  types_native.rs  types_wstp.rs  types_wxf.rs
wolfram-examples/src/: lib.rs
wolfram-examples/tests/: Example.wl  Example.wlt
wolfram-export/: Cargo.toml
wolfram-export-core/: Cargo.toml
wolfram-export-core/src/: catch_panic.rs  lib.rs
wolfram-export-macros/: Cargo.toml
wolfram-export-macros/src/: export.rs  lib.rs
wolfram-export-native/: Cargo.toml
wolfram-export-native/examples/: types.rs
wolfram-export-native/src/: lib.rs
wolfram-export-wstp/: Cargo.toml
wolfram-export-wstp/examples/: types.rs
wolfram-export-wstp/src/: lib.rs
wolfram-export-wxf/: Cargo.toml
wolfram-export-wxf/examples/: point.rs  types.rs
wolfram-export-wxf/src/: lib.rs  macro_utils.rs
wolfram-export-wxf/tests/: manifest_smoke.rs  point_roundtrip.rs
wolfram-export/src/: lib.rs
wolfram-export/src/native/: macro_utils.rs  mod.rs
wolfram-export/src/wstp/: macro_utils.rs  mod.rs
wolfram-export/src/wxf/: macro_utils.rs  mod.rs
wolfram-expr/: Cargo.toml  README.md
wolfram-expr/src/: array_buf.rs  association.rs  bignum.rs  byte_array.rs  complex.rs  conversion.rs  lib.rs  numeric_array.rs  packed_array.rs  ptr_cmp.rs  symbol.rs  tests.rs  wxf.rs
wolfram-expr/src/symbol/: parse.rs
wolfram-library-link/: Cargo.toml
wolfram-library-link-macros/: Cargo.toml
wolfram-library-link-sys/: Cargo.toml  build.rs
wolfram-library-link-sys/src/: lib.rs
wolfram-library-link/RustLink/Examples/: Aborts.wlt  AsyncExamples.wlt  DataStore.wlt  Expressions.wlt  ManagedExpressions.wlt  NumericArrays.wlt  RawFunctions.wlt  WSTP.wlt
wolfram-library-link/examples/: numeric_arrays.rs
wolfram-library-link/examples/docs/convert/: using_expr.rs
wolfram-library-link/examples/docs/evaluate_wolfram_code_from_rust/: generate_message.rs
wolfram-library-link/examples/exprs/: managed.rs
wolfram-library-link/examples/raw/: raw_wstp_function.rs
wolfram-library-link/examples/tests/: test_data_store.rs  test_images.rs  test_numeric_array_conversions.rs  test_share_counts.rs  test_threading.rs  test_wstp.rs
wolfram-library-link/src/: args.rs  async_tasks.rs  catch_panic.rs  data_store.rs  lib.rs  library_data.rs  macro_utils.rs  numeric_array.rs  rtl.rs
wolfram-serializer/: Cargo.toml
wolfram-serializer-macros/: Cargo.toml
wolfram-serializer-macros/src/: deserialize.rs  lib.rs  serialize.rs  shared.rs  ty_classify.rs
wolfram-serializer/src/: consumer.rs  derive_support.rs  from_wolfram.rs  lib.rs  numeric_in.rs  serializer.rs  wl.rs
wolfram-serializer/src/wxf/: constants.rs  cursor.rs  deserialize.rs  mod.rs  varint.rs
wolfram-serializer/tests/: derive_smoke.rs  wl_golden.rs  wolframscript_xvalid.rs  wxf_kernel_fixtures.rs  wxf_roundtrip.rs
wolfram-serializer/tests/fixtures/: generate.wls  wxf_kernel_fixtures.rs
wstp/: Cargo.toml
wstp-sys/: Cargo.toml  build.rs
wstp-sys/src/: lib.rs
wstp/src/: env.rs  get.rs  lib.rs  link_server.rs  strx.rs
wstp/src/kernel/: mod.rs
wstp/tests/: test_loopback_links.rs
xtask/: Cargo.toml
xtask/src/: main.rs
