[workspace]
resolver = "2"

members = [
    "wolfram-app-discovery",
    "wolfram-expr",
    "wolfram-serializer",
    "wolfram-serializer-macros",
    "wstp",
    "wstp-sys",
    "wolfram-library-link",
    "wolfram-library-link-sys",
    "wolfram-export-macros",
    "wolfram-export-core",
    "wolfram-export",
    "wolfram-examples",
    "wolfram-cli",
    "xtask",
]

# default-members excludes the -sys crates so contributors without a local
# Wolfram installation can still run `cargo check` / `cargo test` from the
# workspace root. Building the -sys crates requires Wolfram (their build
# scripts use `wolfram-app-discovery` to locate the C headers).
default-members = [
    "wolfram-expr",
    "wolfram-serializer",
    "wolfram-serializer-macros",
    "wstp",
    "wolfram-library-link",
    "wolfram-export-macros",
    "wolfram-export-core",
    "wolfram-export",
]
