[package]
name = "wolfram-cli"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand for building and packaging Wolfram LibraryLink crates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WolframResearch/wolfram-rust-library"

[[bin]]
name = "cargo-wolfram"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo_metadata = "0.23.1"
clap = { version = "4", features = ["derive"] }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
wolfram-app-discovery = { version = "0.4.9", path = "../wolfram-app-discovery" }
