[package]
name = "wolfram-examples"
version = "0.5.0"
edition = "2021"
publish = false

[package.metadata.wl.pacletinfo]
name = "WolframExamples"
version = "1.0.0"
output = "../notebooks/"
namespace-exports = true
named-exports = false

[dependencies]
wolfram-library-link = { version = "0.5.0", path = "../wolfram-library-link" }
wolfram-expr = { version = "0.5.0", path = "../wolfram-expr" }
wolfram-export = { version = "0.5.0", path = "../wolfram-export", features = ["native", "wstp", "wxf"] }
wolfram-serializer = { version = "0.5.0", path = "../wolfram-serializer" }
wolfram-serializer-macros = { version = "0.5.0", path = "../wolfram-serializer-macros" }

[[example]]
name = "legacy_native"
crate-type = ["cdylib"]
required-features = ["wolfram-library-link/automate-function-loading-boilerplate"]

[[example]]
name = "legacy_wstp"
crate-type = ["cdylib"]
required-features = ["wolfram-library-link/automate-function-loading-boilerplate"]

[[example]]
name = "types_native"
crate-type = ["cdylib"]

[[example]]
name = "types_wstp"
crate-type = ["cdylib"]

[[example]]
name = "types_wxf"
crate-type = ["cdylib"]

[[example]]
name = "mixed"
crate-type = ["cdylib"]
