[package]
name = "wolfram-export-core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Shared inventory + manifest plumbing for the wolfram-export-* crates"

[dependencies]
wolfram-expr = { version = "0.2", path = "../wolfram-expr" }
wolfram-serializer = { version = "0.1.0", path = "../wolfram-serializer" }
once_cell = "1.8.0"
backtrace = { version = "^0.3.46", optional = true }
inventory = { version = "0.2.1", optional = true }
process_path = { version = "0.1.3", optional = true }

[features]
default = ["panic-failure-backtraces", "automate-function-loading-boilerplate"]
panic-failure-backtraces = ["backtrace"]
automate-function-loading-boilerplate = ["inventory", "process_path"]
