[package]
name = "wolfram-export-core"
version = "0.5.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Shared inventory + manifest plumbing for the wolfram-export-* crates"

[dependencies]
wolfram-expr = { version = "0.5.0", path = "../wolfram-expr" }
wolfram-serializer = { version = "0.5.0", path = "../wolfram-serializer" }
inventory = { version = "0.2.1", optional = true }
process_path = { version = "0.1.3", optional = true }

[features]
default = ["automate-function-loading-boilerplate"]
automate-function-loading-boilerplate = ["inventory", "process_path"]
