[package]
name = "wolfram-export-macros"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Procedural macros for #[export_native], #[export_wstp], #[export_wxf]"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
syn = { version = "1.0.85", features = ["full"] }
quote = "1.0.14"

[features]
default = []
automate-function-loading-boilerplate = []
