[package]
name = "wolfram-export-native"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Runtime support for #[export]-marked Wolfram LibraryLink native (MArgument) functions"

[dependencies]
wolfram-export-macros = { version = "0.1.0", path = "../wolfram-export-macros" }
wolfram-export-core = { version = "0.1.0", path = "../wolfram-export-core" }
wolfram-library-link = { version = "0.2.11", path = "../wolfram-library-link", default-features = false, features = ["automate-function-loading-boilerplate"] }
wolfram-library-link-sys = { version = "0.2.10", path = "../wolfram-library-link-sys" }
wolfram-expr = { version = "0.2", path = "../wolfram-expr" }

[dev-dependencies]
wolfram-examples = { path = "../wolfram-examples" }
wolfram-library-link = { version = "0.2.11", path = "../wolfram-library-link", default-features = false }

[features]
default = ["automate-function-loading-boilerplate"]
automate-function-loading-boilerplate = [
    "wolfram-export-core/automate-function-loading-boilerplate",
    "wolfram-export-macros/automate-function-loading-boilerplate",
]

[[example]]
name = "types_native"
path = "examples/types.rs"
crate-type = ["cdylib"]
required-features = ["automate-function-loading-boilerplate"]
