[package]
name = "wolfram-export-wxf"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Runtime support for #[export]-marked Wolfram functions with typed args via WXF"

[dependencies]
wolfram-export-macros = { version = "0.1.0", path = "../wolfram-export-macros" }
wolfram-export-core = { version = "0.1.0", path = "../wolfram-export-core" }
wolfram-export-native = { version = "0.1.0", path = "../wolfram-export-native" }
wolfram-library-link = { version = "0.2.11", path = "../wolfram-library-link", default-features = false, features = ["automate-function-loading-boilerplate", "panic-failure-backtraces"] }
wolfram-library-link-sys = { version = "0.2.10", path = "../wolfram-library-link-sys" }
wolfram-serializer = { version = "0.1.0", path = "../wolfram-serializer" }
wolfram-expr = { version = "0.2", path = "../wolfram-expr" }

[dev-dependencies]
libloading = "0.8"
wolfram-examples = { path = "../wolfram-examples" }

[features]
default = ["automate-function-loading-boilerplate"]
automate-function-loading-boilerplate = [
    "wolfram-export-core/automate-function-loading-boilerplate",
    "wolfram-export-macros/automate-function-loading-boilerplate",
]

[[example]]
name = "types_wxf"
path = "examples/types.rs"
crate-type = ["cdylib"]
required-features = ["automate-function-loading-boilerplate"]
