[package]
name = "wolfram-expr"
version = "0.2.0"
authors = ["Connor Gray <code@connorgray.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Efficient and ergonomic representation of Wolfram expressions in Rust"
keywords = ["wolfram", "wolfram-language", "mathematica", "wolfram-engine", "expression"]
categories = ["encoding"]

[features]
default = []

# Whether to publically export nom functions for parsing symbols. This feature should not
# be considered stable -- it is included only so that wl-parse can build higher-level
# expression parsing on top of it.
unstable_parse = []

# Enable arbitrary-precision number variants (BigInteger, BigReal) on ExprKind. Pulls
# `num-bigint` for the integer side. Off by default to keep the lean baseline lean.
bignum = ["dep:num-bigint", "dep:num-traits"]

[dependencies]
ordered-float = "3.4.0"
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
