[package]
name = "wolfram-library-link-sys"
version = "0.5.0"
authors = ["Connor Gray <code@connorgray.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Low-level FFI bindings to the Wolfram LibraryLink C API"
keywords = ["wolfram-library-link", "wstp", "wolfram", "wolfram-language", "wolfram-engine"]
categories = ["external-ffi-bindings", "development-tools::ffi"]

# TODO: Use the 'links' key?
#       See: https://doc.rust-lang.org/cargo/reference/build-scripts.html#a-sys-packages

[dependencies]
# `mcomplex` is re-exported from `wolfram-expr::Complex64` instead of being
# bindgen-generated, so the same complex type is available across all crates.
wolfram-expr = { version = "0.5.0", path = "../wolfram-expr" }

[build-dependencies]
env_logger = "0.10.0"

wolfram-app-discovery = { version = "0.5.0", path = "../wolfram-app-discovery" }
