[package]
name = "wolfram-serializer"
version = "0.1.0"
authors = ["Wolfram Research"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Serialize and deserialize Wolfram expressions to/from WL InputForm and WXF binary"
keywords = ["wolfram", "wxf", "wolfram-language", "serialization", "mathematica"]
categories = ["encoding"]

[features]
default = []
# Forward to wolfram-expr/bignum to enable BigInteger / BigReal serialization.
bignum = ["wolfram-expr/bignum"]

[dependencies]
wolfram-expr = { version = "0.2", path = "../wolfram-expr" }
