[package]
name = "wolfram-serializer"
version = "0.5.0"
authors = ["Wolfram Research"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Serialize and deserialize Wolfram expressions to/from WL InputForm and WXF binary"
keywords = ["wolfram", "wxf", "wolfram-language", "serialization", "mathematica"]
categories = ["encoding"]

[dependencies]
wolfram-expr = { version = "0.5.0", path = "../wolfram-expr" }
wolfram-serializer-macros = { version = "0.5.0", path = "../wolfram-serializer-macros" }
# zlib for the optional WXF compressed payload (`8C:` header). Pure-Rust backend
# so we don't pull a C zlib build into the dep graph.
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
# base64 for `ByteArray["..."]` WL InputForm encoding.
base64 = { version = "0.22", default-features = false, features = ["std"] }
