[package]
name = "wstp"
version = "0.2.9"
edition = "2021"
rust-version = "1.70" # Update to 1.70 for OnceLock
license = "MIT OR Apache-2.0"
authors = ["Connor Gray <code@connorgray.com>"]
readme = "README.md"
repository = "https://github.com/WolframResearch/wolfram-rust-library"
description = "Bindings to the Wolfram Symbolic Transfer Protocol (WSTP)"
keywords = ["wstp", "mathlink", "wolfram", "wolfram-language", "wolfram-engine"]
categories = ["external-ffi-bindings", "development-tools::ffi", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wstp-sys = { version = "0.2.8", path = "../wstp-sys" }

wolfram-expr = { version = "0.2", path = "../wolfram-expr" }

ref-cast = "1.0.13"

[dev-dependencies]
rand = "0.8.3"
wolfram-app-discovery = { version = "0.4.1", path = "../wolfram-app-discovery" }
